[package]
name = "rclp"
version = "0.1.0"
authors = ["roman.bessonov"]
edition = "2018"

[dependencies]
whoami="0.5.0"
rodio="0.8.1"
daemonize="0.4.1"
ipc-channel="0.11.3"
rclplib= {path="./lib"}
serde_json = "1.0"
serde_cbor = "0.9"
serde = "1.0"
bincode = "1.1.2"


[[bin]]
name = "rclpd"
path = "src/rclpd/main.rs"

[[bin]]
name = "rclp"
path = "src/rclp/main.rs"